--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
         "name": "Remote Debug",
         "type": "python",
         "request": "attach",
+        "preLaunchTask": "docker-compose-up",
         "port": 5678,
         "host": "0.0.0.0",
         "pathMappings": [
