--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,10 @@ version: "3.3"
 
 services:
   py:
-    build: .
+    build:
+      context: .
+      target: dev
     container_name: py
     volumes:
       - ./:/usr/src/app:rw,cached
     working_dir: /usr/src/app
-    ports:
-      - 5678:5678
