--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,16 @@ envlist = py38
 [testenv]
 deps =
     flake8
+    black
+    coverage
 
 commands =
     python setup.py check -m -s
     flake8 .
-    python -m unittest
+    black .
+    black . --check
+    coverage run -m unittest discover
+    coverage report -m
 
 [flake8]
 exclude = .tox,*.egg,build,data
