--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pre-commit = "==2.17.0"
 black = "==21.12b0"
 isort = "==5.10.1"
 flake8 = "==4.0.1"
+safety= "==1.10.3"
 
 [requires]
 python_version = "3.9"
