feat: Adding .github workflows support

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,1 @@
-### XDebug
-
-## Use with Docker for Mac
-XDEBUG_REMOTE_HOST=host.docker.internal
-
-## Use with docker-machine
-# XDEBUG_REMOTE_HOST=10.0.2.2
+### Set your environment vars here!
