--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: push
+on: [pull_request]
 
 jobs:
   build:
@@ -10,5 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build
         run: make
+      - name: Build venv
+        run: make poetry.update
       - name: Test
         run: make test
